# Doclify

./: README.md  pyproject.toml
.github/workflows/: publish.yml
doclify/components/: init.py  run.py
doclify/pipelines/: supervisor.py
doclify/prompts/: final_summary.txt
doclify/utils/: llm.py  scanner.py
docly/components/: init.py
docly/pipelines/: supervisor.py
docly/utils/: scanner.py
